[HttpsPost] code cleanup by using StandardCharsets